# micropython-captive-dns-server

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  query_server.sh  run_tests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: pypi-publish-test.yml  pypi-publish.yml  tests.yml
libs/: README.md
micropython_captive_dns_server/: packet.py  server.py
micropython_captive_dns_server/test/: test_packet.py
