[micropython-captive-dns-server]
name = micropython-captive-dns-server
version = 0.0.1.dev
author = Patrick McAndrew
author_email = patrick@urg.name
description = Micropython asyncio simplistic dns server for use with captive portals
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/urg/micropython-captive-dns-server
project_urls =
    Bug Tracker = https://github.com/urg/micropython-captive-dns-server/issues
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: MicroPython
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
    = .
py_modules =
    micropython_captive_dns_server

