[metadata]
name = "micropython-captive-dns-server"
version = "0.0.4.dev"
description = "Micropython asyncio simplistic dns server for use with captive portals"
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: MicroPython
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
requires-python = ">=3.7"

[options]
zip_safe = False
include_package_data = True
package_dir =
    = .
py_modules =
    micropython_captive_dns_server
